# moyu

./: README.md  aim.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/styles/: global.less  variables.css  variables.less
src/components/: index.js
src/components/CategoryTabs/: Index.vue
src/components/Settings/: Index.vue
src/components/Settings/modules/: About.vue  Appearance.vue  (+2 more)
src/hooks/: useApi.js  useDark.js  useReminder.js  useVideoWallpaper.js
src/layouts/: FHeader.vue  FSidebar.vue
src/layouts/BlankLayout/: Index.vue
src/layouts/DefaultLayout/: Index.vue
src/layouts/FHeader/: Index.vue  TitleBarButtons.vue
src/layouts/FSidebar/: Index.vue
src/router/: index.js
src/stores/: app.js  pinia.js
src/stores/modules/: app.js  bookSource.js  game.js  home.js  musicSource.js  news.js  reminder.js  wallpaper.js
src/utils/: http.js  legado.js  security.js  useApi.js  util.js
src/utils/musicSdk/: index.js
src/views/: File.vue
src/views/Game/: Index.vue
src/views/Home/: Index.vue
src/views/MusicPlayer/: Index.vue
src/views/NewsList/: Index.vue
src/views/NovelReader/: Index.vue  rules.md
src/views/Sub/: Reminder.vue
src/views/Tools/: Index.vue
src/views/VideoWallpaper/: Index.vue  wallpaper.md
src/views/Wallpaper/: Dynamic.vue  Favorite.vue  History.vue  Index.vue  Static.vue
(+42 files in other folders)
